<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button_main_a"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/a_note"
        app:layout_constraintBottom_toTopOf="@+id/button_main_bb"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.108"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_main_bb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/b_flat_note"
        app:layout_constraintBottom_toTopOf="@+id/button_main_b"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.108"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_main_a" />

    <Button
        android:id="@+id/button_main_b"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/b_note"
        app:layout_constraintBottom_toTopOf="@+id/button_main_c"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.108"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_main_bb" />

    <Button
        android:id="@+id/button_main_c"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/c_note"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.108"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_main_b" />

    <Button
        android:id="@+id/button_main_e"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/e_note"
        app:layout_constraintBottom_toTopOf="@+id/button_main_dS"
        app:layout_constraintEnd_toStartOf="@+id/button_main_f"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_main_a"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/button_main_dS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dS_note"
        app:layout_constraintBottom_toTopOf="@+id/button_main_d"
        app:layout_constraintEnd_toStartOf="@+id/button_main_fS"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_main_bb"
        app:layout_constraintTop_toBottomOf="@+id/button_main_e"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/button_main_d"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/d_note"
        app:layout_constraintBottom_toTopOf="@+id/button_main_cS"
        app:layout_constraintEnd_toStartOf="@+id/button_main_g"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_main_b"
        app:layout_constraintTop_toBottomOf="@+id/button_main_dS"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/button_main_cS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cS_note"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_main_gS"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_main_c"
        app:layout_constraintTop_toBottomOf="@+id/button_main_d"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/button_main_f"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/f_note"
        app:layout_constraintBottom_toTopOf="@+id/button_main_fS"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_main_e"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/button_main_g"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/g_note"
        app:layout_constraintBottom_toTopOf="@+id/button_main_gS"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_main_d"
        app:layout_constraintTop_toBottomOf="@+id/button_main_fS"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/button_main_gS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gS_note"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_main_cS"
        app:layout_constraintTop_toBottomOf="@+id/button_main_g"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/button_main_fS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fS_note"
        app:layout_constraintBottom_toTopOf="@+id/button_main_g"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_main_dS"
        app:layout_constraintTop_toBottomOf="@+id/button_main_f"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/button_main_play_song"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/play_song"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_main_cS"
        app:layout_constraintVertical_bias="0.5" />
</androidx.constraintlayout.widget.ConstraintLayout>